<resources>
    <string name="app_name">LINE Yesterday</string>
    <string name="feed_screen_name">Feed</string>
    <string name="detail_screen_name">Detail</string>
    <string name="favorites_screen_name">Favorites</string>
    <string name="settings_screen_name">Settings</string>
    <string name="use_real_client">USE_REAL_CLIENT</string>
    <string name="settings_restart_required">Restart the app to apply this change</string>
    <string name="favorites_empty_content">No favorites yet</string>
    <string name="feed_empty_content">No content available</string>
    <string name="feed_error_content">Unable to load content</string>
    <string name="feed_item_image">Feed item image</string>
    <string name="detail_image">Detail image</string>
    <string name="detail_error_content">Unable to load detail</string>
    <string name="detail_retry">Retry</string>
    <string name="detail_add_favorite">Add to favorites</string>
    <string name="detail_remove_favorite">Remove from favorites</string>
    <string name="item_time">Time: %1$s</string>
    <string name="item_time_not_available">Not available</string>
    <string name="item_source">Source: %1$s</string>
</resources>
