<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="16dp" />

        <ProgressBar
            android:id="@+id/initial_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/empty_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/feed_empty_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/error_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/feed_error_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/screen_name"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:visibility="gone"
            android:contentDescription="@string/feed_screen_name" />
    </FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
